fix empty mini cart vertical align issue on WP 6.0

--- a/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
+++ b/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
@@ -59,15 +59,19 @@
 		padding: 0;
 
 		> .block-editor-inner-blocks {
-			max-height: 100vh;
-			overflow-y: auto;
 			box-sizing: border-box;
+			display: flex;
+			flex-direction: column;
+			height: 100vh;
+			justify-content: center;
+			overflow-y: auto;
 			padding: $gap-largest $gap $gap;
 		}
 
 		// Temporary fix after the appender button was positioned absolute
 		// See https://github.com/woocommerce/woocommerce-gutenberg-products-block/issues/5742#issuecomment-1032804168
 		.block-list-appender {
+			margin-top: $gap;
 			position: relative;
 		}
 
